Many updates integrating with new vue client
