# models/media/media.go
@@ -22,6 +22,7 @@ var ErrMediaNotFound = errors.New("media not found")
 var ErrMediaAlreadyExists = errors.New("media already exists")
 var ErrNotDisplayable = errors.New("media is not displayable")
 var ErrMediaBadMimeType = errors.New("media has a bad mime type")
+var ErrInvalidQuality = errors.Errorf("invalid media quality")
 
 type Media struct {
 	CreateDate time.Time `bson:"createDate"`
@@ -98,7 +99,7 @@ func SaveMedia(ctx context.Context, media *Media) error {
 		return err
 	}
 
-	_, err = col.InsertOne(ctx, media)
+	_, err = col.ReplaceOne(ctx, bson.M{"contentId": media.ContentID}, media, options.Replace().SetUpsert(true))
 	if err != nil {
 		return db.WrapError(err, "insert media")
 	}
@@ -272,6 +273,20 @@ func DropMediaCollection(ctx context.Context) error {
 	return nil
 }
 
+func DropHDIRs(ctx context.Context) error {
+	col, err := db.GetCollection(ctx, MediaCollectionKey)
+	if err != nil {
+		return err
+	}
+
+	_, err = col.UpdateMany(ctx, bson.M{}, bson.M{"$unset": bson.M{"hdir": ""}})
+	if err != nil {
+		return err
+	}
+
+	return nil
+}
+
 func NewMedia(contentId ContentId) *Media {
 	return &Media{
 		ContentID: contentId,
@@ -419,131 +434,22 @@ func (m *Media) GetHighresCacheFiles(pageNum int) *file_model.WeblensFileImpl {
 	return m.highResCacheFiles[pageNum]
 }
 
+func (m *Media) IsSufficentlyProcessed() bool {
+	m.updateMu.RLock()
+	defer m.updateMu.RUnlock()
+
+	if len(m.FileIDs) == 0 {
+		return false
+	}
+
+	if len(m.HDIR) == 0 {
+		return false
+	}
+
+	return true
+}
+
 const ThumbnailHeight float32 = 500
-
-// func (m *Media) UnmarshalBSON(bs []byte) error {
-// 	raw := bson.Raw(bs)
-// 	contentId, ok := raw.Lookup("contentId").StringValueOK()
-// 	if !ok {
-// 		return werror.Errorf("failed to parse contentId")
-// 	}
-// 	m.ContentID = ContentId(contentId)
-//
-// 	filesArr, ok := raw.Lookup("fileIds").ArrayOK()
-// 	if ok {
-// 		fileIdsRaw, err := filesArr.Values()
-// 		if err != nil {
-// 			return werror.WithStack(err)
-// 		}
-// 		m.FileIDs = slices.Map(
-// 			fileIdsRaw, func(e bson.RawValue) string {
-// 				return string(e.StringValue())
-// 			},
-// 		)
-// 	} else {
-// 		m.FileIDs = []string{}
-// 	}
-//
-// 	m.PageCount = int(raw.Lookup("pageCount").Int32())
-//
-// 	videoLength, ok := raw.Lookup("videoLength").Int32OK()
-// 	if ok {
-// 		m.Duration = int(videoLength)
-// 	}
-//
-// 	// m.BlurHash = raw.Lookup("blurHash").StringValue()
-// 	m.Owner = raw.Lookup("owner").StringValue()
-// 	m.Width = int(raw.Lookup("width").Int32())
-// 	m.Height = int(raw.Lookup("height").Int32())
-//
-// 	duration, ok := raw.Lookup("duration").Int32OK()
-// 	if ok {
-// 		m.Duration = int(duration)
-// 	}
-//
-// 	create := raw.Lookup("createDate")
-// 	createTime, ok := create.TimeOK()
-// 	if !ok {
-// 		m.CreateDate = time.UnixMilli(create.Int64())
-// 	} else {
-// 		m.CreateDate = createTime
-// 	}
-// 	m.MimeType = raw.Lookup("mimeType").StringValue()
-//
-// 	likedArr, ok := raw.Lookup("likedBy").ArrayOK()
-// 	if ok {
-// 		likedValues, err := likedArr.Values()
-// 		if err != nil {
-// 			return werror.WithStack(err)
-// 		}
-// 		m.LikedBy = internal.Map(
-// 			likedValues, func(e bson.RawValue) Username {
-// 				return Username(e.StringValue())
-// 			},
-// 		)
-// 	} else {
-// 		m.LikedBy = []Username{}
-// 	}
-//
-// 	rtArr, ok := raw.Lookup("recognitionTags").ArrayOK()
-// 	if ok {
-// 		rts, err := rtArr.Values()
-// 		if err != nil {
-// 			return werror.WithStack(err)
-// 		}
-//
-// 		m.SetRecognitionTags(internal.Map(
-// 			rts, func(e bson.RawValue) string {
-// 				return e.StringValue()
-// 			},
-// 		))
-// 	}
-//
-// 	hidden, ok := raw.Lookup("hidden").BooleanOK()
-// 	if ok {
-// 		m.setHidden(hidden)
-// 	}
-//
-// 	m.imported = true
-//
-// 	return nil
-// }
-
-// type MediaService interface {
-// 	Size() int
-// 	Add(media *Media) error
-//
-// 	Get(id ContentId) *Media
-// 	GetAll() []*Media
-//
-// 	Del(id ContentId) error
-// 	HideMedia(m *Media, hidden bool) error
-// 	AdjustMediaDates(anchor *Media, newTime time.Time, extraMedias []*Media) error
-//
-// 	LoadMediaFromFile(m *Media, file *file_model.WeblensFileImpl) error
-// 	RemoveFileFromMedia(media *Media, fileId string) error
-// 	Cleanup() error
-// 	Drop() error
-// 	AddFileToMedia(media *Media, file *file_model.WeblensFileImpl) error
-//
-// 	GetMediaType(m *Media) MediaType
-// 	GetMediaTypes() MediaTypeService
-// 	IsFileDisplayable(file *file_model.WeblensFileImpl) bool
-// 	IsCached(m *Media) bool
-// 	GetProminentColors(media *Media) (prom []string, err error)
-// 	GetMediaConverted(m *Media, format string) ([]byte, error)
-//
-// 	FetchCacheImg(m *Media, quality MediaQuality, pageNum int) ([]byte, error)
-// 	StreamVideo(m *Media, u *user_model.User, share *share_model.FileShare) (*VideoStreamer, error)
-// 	StreamCacheVideo(m *Media, startByte, endByte int) ([]byte, error)
-//
-// 	GetFilteredMedia(
-// 		requester *user_model.User, sort string, sortDirection int, excludeIds []ContentId, raw bool, hidden bool, search string,
-// 	) ([]*Media, error)
-// 	RecursiveGetMedia(folders ...*file_model.WeblensFileImpl) []*Media
-//
-// 	SetMediaLiked(mediaId ContentId, liked bool, username Username) error
-// }
 
 type ContentId = string
 type MediaQuality string
@@ -593,10 +499,4 @@ func (media *Media) AddFileToMedia(ctx context.Context, fileId string) error {
 	}
 
 	return nil
-}
-
-func (m *Media) setHidden(hidden bool) {
-	m.updateMu.Lock()
-	defer m.updateMu.Unlock()
-	m.Hidden = hidden
 }
